[package]
name = "lu-mod-tool"
version = "0.1.0"
edition = "2018"

[dependencies]
color-eyre = "0.6.0"
structopt = "0.3.26" # should swap this out for clap v3 probably
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.23.0-alpha3", features = [ "serialize" ] }
assembly-fdb = { git = "https://github.com/LUDevNet/Assembly" }
mapr = "0.8"
sfhash = "0.1"